Improve file names of csv exported files